--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
   "devDependencies": {
     "typescript": "^4.8.4"
-  }
+  },
+  "dependencies": {
+    "@types/react": "^18.0.21",
+    "react": "^18.2.0"
+  },
+  "name": "react-local-state",
+  "version": "1.0.0",
+  "description": "Local key/value storage for React/React Native with typing and robust hooks.",
+  "main": "index.ts",
+  "directories": {
+    "example": "example"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "MIT"
 }
