--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@types/react": "^18.0.21",
-    "react": "^18.2.0"
+    "react": "^18.0.0",
+    "@types/react": "~18.0.0"
   },
   "name": "react-local-state",
   "version": "1.0.0",
